# ecoscope-workflows

examples/events/: spec.yaml  test-cases.yaml
examples/events/ecoscope-workflows-events-workflow/: .dockerignore  Dockerfile  README.md  pixi.toml  pyproject.toml
examples/events/ecoscope-workflows-events-workflow/ecoscope_workflows_events_workflow/: app.py  cli.py  dispatch.py  formdata.py  params-jsonschema.json  params.py  rjsf.json
examples/events/ecoscope-workflows-events-workflow/ecoscope_workflows_events_workflow/dags/: __init__.py  jupytext.py  run_async.py  run_async_mock_io.py  run_sequential.py  run_sequential_mock_io.py
examples/events/ecoscope-workflows-events-workflow/tests/: conftest.py  test_app.py  test_cli.py
examples/patrols/: spec.yaml  test-cases.yaml
examples/patrols/ecoscope-workflows-patrols-workflow/: .dockerignore  Dockerfile  README.md  pixi.toml  pyproject.toml
examples/patrols/ecoscope-workflows-patrols-workflow/ecoscope_workflows_patrols_workflow/: app.py  cli.py  dispatch.py  formdata.py  params-jsonschema.json  params.py  rjsf.json
examples/patrols/ecoscope-workflows-patrols-workflow/ecoscope_workflows_patrols_workflow/dags/: __init__.py  jupytext.py  run_async.py  run_async_mock_io.py  run_sequential.py  run_sequential_mock_io.py
examples/patrols/ecoscope-workflows-patrols-workflow/tests/: conftest.py  test_app.py  test_cli.py
examples/subject-tracking/: spec.yaml  test-cases.yaml
examples/subject-tracking/ecoscope-workflows-subject-tracking-workflow/: .dockerignore  Dockerfile  README.md  pixi.toml  pyproject.toml
examples/subject-tracking/ecoscope-workflows-subject-tracking-workflow/ecoscope_workflows_subject_tracking_workflow/: app.py  cli.py  dispatch.py  formdata.py  params-jsonschema.json  params.py  rjsf.json
examples/subject-tracking/ecoscope-workflows-subject-tracking-workflow/ecoscope_workflows_subject_tracking_workflow/dags/: __init__.py  jupytext.py  run_async.py  run_async_mock_io.py  run_sequential.py  run_sequential_mock_io.py
examples/subject-tracking/ecoscope-workflows-subject-tracking-workflow/tests/: conftest.py  test_app.py  test_cli.py
publish/recipes/release/: ecoscope-workflows-core.yaml  ecoscope-workflows-ext-ecoscope.yaml
src/ecoscope-workflows-core/ecoscope_workflows_core/: artifacts.py  compiler.py  jsonschema.py
src/ecoscope-workflows-core/ecoscope_workflows_core/tasks/: __init__.py
src/ecoscope-workflows-core/ecoscope_workflows_core/tasks/config/: __init__.py  _workflow_details.py  workflow_details.py
src/ecoscope-workflows-core/ecoscope_workflows_core/tasks/results/: _dashboard.py
src/ecoscope-workflows-core/ecoscope_workflows_core/templates/pkg/: app.jinja2
src/ecoscope-workflows-core/ecoscope_workflows_core/templates/pkg/dags/: jupytext.jinja2  run_async.jinja2  run_sequential.jinja2
src/ecoscope-workflows-core/ecoscope_workflows_core/templates/tests/: test_app.jinja2
src/ecoscope-workflows-core/tests/tasks/: test_dashboard.py
src/ecoscope-workflows-ext-ecoscope/: pyproject.toml
