# [generated]
# by = { compiler = "ecoscope-workflows-core", version = "9999" }
# from-spec-sha256 = "00d8c9580f2a24ef3fda767e8e8886ba9c48337c73bb8b07fd7ed5a628eef24f"

[project]
name = "ecoscope-workflows-subject-tracking-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-subject-tracking-workflow = "ecoscope_workflows_subject_tracking_workflow.cli:main" }
