# [generated]
# by = { compiler = "ecoscope-workflows-core", version = "9999" }
# from-spec-sha256 = "71942219c2ad314fb88fdc036bcbbd47f07aa1c5724911f9757ac0ec52b96089"

[project]
name = "ecoscope-workflows-subject-tracking-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-subject-tracking-workflow = "ecoscope_workflows_subject_tracking_workflow.cli:main" }
